task 10 complete and fixed my broken css

--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,32 @@ html {
 }
 
 .message {
-  display: block;
+  /* display: block;
   justify-content: center;
   align-items: center;
   text-align: center;
   height: 100vh;
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(175, 175, 175, 0.8); 
+  text-shadow: 1px 1px 2px #2f5056;
+  color: #de9a89;
+  font-size: 24px;
+  font-weight: bold;
+  z-index: 999;
+  border-top: solid #2f5056 2px;
+  border-bottom: solid #2f5056 2px;
+  text-shadow: 1px 1px 2px #2f5056;
+  box-shadow: 1px 1px 2px #2f5056; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
+  width: 100vw; 
   position: fixed;
   top: 0;
   left: 0;
