--- a/src/components/commentsList.css
+++ b/src/components/commentsList.css
@@ -1,4 +1,5 @@
 .commentsSection {
+    font-family: "Jersey 15", sans-serif;  
     background: #dadada;
     border-radius: 10px;
     border: 2px solid #2f5056;
