--- a/src/components/deleteComment.css
+++ b/src/components/deleteComment.css
@@ -1,7 +1,8 @@
 .commentDeleteButton {
+    font-family: "Press Start 2p", cursive;
     align-self: flex-end;
     float: right;
-    font-size: 14px;
+    font-size: 8px;
     background-color: #2f5056;
     color: #de9a89;
     border: none;
@@ -9,4 +10,4 @@
     cursor: pointer;
     border-radius: 5px;
     box-shadow: 1px 1px 2px #de9a89;
-}
+}   
